Adding a main menu with an introduction

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Set Displayer</title>
+    <title>Aletta's Kitchen</title>
     <link rel="stylesheet" href="style/menu.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/titlescreen.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -33,13 +34,33 @@
     <div id="filterScreen">
         <div id="filterScreenWrapper">
             <div class="dropdown">
-                <button onclick="showClassDropdown()" class="dropbtn" id="class_dropbtn">Cards: All</button>
+                <button onclick="showClassDropdown()" class="dropbtn" id="class_dropbtn">Choose a Class</button>
                 <div id="class_dropdown" class="dropdown-content"></div>
             </div>
 
-            <button class="setbutton" id="buttonset1">Around the World in 80 Meals I</button>
-            <button class="setbutton" id="buttonset2">Around the World in 80 Meals II</button>
+            <button class="setbutton" id="buttonset1">Around the World in 80 Meals</button>
+            <button class="setbutton" id="buttonset2">Aletta's Kitchen</button>
         </div>
+    </div>
+
+    <div id="titlescreen">
+        <br><br>
+        <img src="images/Logo.png" id="logo">
+        <br>__<br><br>
+
+        4 years ago, young ingenue Aletta Springcutter set forth on a globetrotting journey to master her craft of cooking.  Much has changed since then, and the experience of her travels have formed the foundation for the award-winning recipes in her titular restaurant. 
+
+        Welcome to Aletta's Kitchen.
+        <br>__<br><br>
+
+        New Keywords:<br><br>
+        <img src="https://i.imgur.com/dLTlVOR.png" style="width: 250px;">
+        <img src="https://i.imgur.com/Pfy2FNc.png" style="width: 250px;">
+        <br>__<br><br>
+
+        <b>Choose a Class to begin with!</b>
+
+        <br><br><br>
     </div>
 
     <div id="gallery">The Gallery Should Be Here</div>
