--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="https://i.imgur.com/Pfy2FNc.png" style="width: 250px;">
         <br>__<br><br>
 
-        <b>Around The World in 80 Meals</b> is the set that started the saga of young Springcutter in 2018. <br>View them in the above dropdown menu, or see her latest creations in the <b>Aletta's Kitchen set.</b>
+        <i>Around The World in 80 Meals</i> is the set that started the saga of young Springcutter in 2018. <br>View them in the above dropdown menu, or see her latest creations in the <i>Aletta's Kitchen set.</i>
 
         <br><br><br>
     </div>
