--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         4 years ago, young ingenue Aletta Springcutter set forth on a globetrotting journey to master her craft of cooking.  Much has changed since then, and the experience of her travels have formed the foundation for the award-winning recipes in her titular restaurant. 
 
-        Welcome to Aletta's Kitchen.
+	    <br><br>Welcome to <i>Aletta's Kitchen</i>.
         <br>__<br><br>
 
         New Keywords:<br><br>
