--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    <br><br>Welcome to <i>Aletta's Kitchen</i>.
         <br>__<br><br>
 
-        New Keywords:<br><br>
+	    <b>New Keywords</b>:<br><br>
         <img src="https://i.imgur.com/dLTlVOR.png" style="width: 250px;">
         <img src="https://i.imgur.com/Pfy2FNc.png" style="width: 250px;">
         <br>__<br><br>
