--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="images/Logo.png" id="logo">
         <br>__<br><br>
 
-        4 years ago, young ingenue Aletta Springcutter set forth on a globetrotting journey to master her craft of cooking.  Much has changed since then, and the experience of her travels have formed the foundation for the award-winning recipes in her titular restaurant. 
+        In a quaint part of the world works a girl in her cafe.<br>The food she serves smell of exotic spices, seeds and meats -- a fusion of things otherwise a thousand miles apart.
 
 	    <br><br>Welcome to <i>Aletta's Kitchen</i>.
         <br>__<br><br>
