--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="images/Logo.png" id="logo">
         <br>__<br><br>
 
-        In a quaint part of the world works a girl in her cafe.<br>The food she serves smell of exotic spices, seeds and meats -- a fusion of things otherwise a thousand miles apart.
+        In a quaint part of the world works a girl in her cafe.<br><br>The food she serves smell of exotic spices, seeds and meats -- a fusion of things otherwise a thousand miles apart.
 
 	    <br><br>Welcome to <i>Aletta's Kitchen</i>.
         <br>__<br><br>
