--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	    <b>New Keywords</b>:<br><br>
         <img src="https://i.imgur.com/dLTlVOR.png" style="width: 250px;">
-        <img src="https://i.imgur.com/Pfy2FNc.png" style="width: 250px;">
+        <img src="https://i.imgur.com/Wdwv467.png" style="width: 250px;">
         <br>__<br><br>
 
         <i>Around The World in 80 Meals</i> is the set that started the saga of young Springcutter in 2018. <br>View them in the above dropdown menu, or see her latest creations in the <i>Aletta's Kitchen set.</i>
