--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div id="class_dropdown" class="dropdown-content"></div>
             </div>
 
-            <button class="setbutton" id="buttonset1">Around the World in 80 Meals</button>
-            <button class="setbutton" id="buttonset2">Aletta's Kitchen</button>
+            <button class="setbutton" id="buttonset1">Around the World in 80 Meals (2018)</button>
+            <button class="setbutton" id="buttonset2">Aletta's Kitchen (2022)</button>
         </div>
     </div>
 
